fix: customize code scrollbar and footer year

--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,23 @@ pre code.rainbow-show {
     overflow-x: auto;
     padding: 1em;
 }
+
+pre code::-webkit-scrollbar {
+    width: 10px;
+    background-color: transparent;
+  }
+  
+pre code::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #32beff;
+  }
+  
+pre code::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    background-color: transparent;
+  }
+
 .docs_link {
     text-decoration: none;
     color: #e6e6e6;
@@ -323,3 +340,4 @@ pre code.rainbow-show {
     padding-right: 10px;
     vertical-align: bottom;
 }
+
